// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`admin_console/system_role_users should match snapshot 1`] = `
<div>
  <div
    class="AdminPanel clearfix "
    id="SystemRoleUsers"
  >
    <div
      class="header"
    >
      <div>
        <h3>
          Assigned People
        </h3>
        <div
          class="mt-2"
        >
          List of people assigned to this system role.
        </div>
      </div>
      <div
        class="button"
      >
        <button
          class="style--none btn btn-primary"
          id="addRoleMembers"
        >
          Add People
        </button>
      </div>
    </div>
    <div
      class="DataGrid"
      data-testid="dataGrid"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value="asdfasdf"
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle "
            data-testid="clear-search"
          />
        </div>
      </div>
      <div
        class="DataGrid_header"
        data-testid="dataGridHeader"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 3;"
        >
          Name
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 1;"
        />
        <div
          class="DataGrid_cell"
        />
      </div>
      <div
        class="DataGrid_rows"
        data-testid="dataGridRows"
      >
        <div
          class="DataGrid_loading"
        >
          <span
            class="LoadingSpinner"
            data-testid="loadingSpinner"
            id="loadingSpinner"
          >
            <span
              class="fa fa-spinner fa-fw fa-pulse spinner"
              title="Loading Icon"
            />
          </span>
          Loading
        </div>
      </div>
      <div
        class="DataGrid_footer"
        data-testid="dataGridFooter"
      >
        <div
          class="DataGrid_cell"
        >
          <span
            data-testid="dataGridPaginationInfo"
          >
            1 - 2 of 2
          </span>
          <button
            aria-label="Previous page"
            class="btn btn-quaternary btn-icon btn-sm ml-2 prev disabled"
            data-testid="dataGridPrev"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-chevron-left"
              title="Previous Icon"
            />
          </button>
          <button
            aria-label="Next page"
            class="btn btn-quaternary btn-icon btn-sm next disabled"
            data-testid="dataGridNext"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-chevron-right"
              title="Next Icon"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`admin_console/system_role_users should match snapshot with readOnly true 1`] = `
<div>
  <div
    class="AdminPanel clearfix "
    id="SystemRoleUsers"
  >
    <div
      class="header"
    >
      <div>
        <h3>
          Assigned People
        </h3>
        <div
          class="mt-2"
        >
          List of people assigned to this system role.
        </div>
      </div>
      <div
        class="button"
      >
        <button
          class="style--none btn btn-primary"
          disabled=""
          id="addRoleMembers"
        >
          Add People
        </button>
      </div>
    </div>
    <div
      class="DataGrid"
      data-testid="dataGrid"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value="asdfasdf"
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle "
            data-testid="clear-search"
          />
        </div>
      </div>
      <div
        class="DataGrid_header"
        data-testid="dataGridHeader"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 3;"
        >
          Name
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 1;"
        />
        <div
          class="DataGrid_cell"
        />
      </div>
      <div
        class="DataGrid_rows"
        data-testid="dataGridRows"
      >
        <div
          class="DataGrid_row"
          data-testid="dataGridRow"
        >
          <div
            class="DataGrid_cell"
            data-testid="dataGridCell"
            style="flex-grow: 3;"
          >
            <div
              class="UserGrid_nameRow"
            >
              <div
                data-testid="userGridAvatar"
              >
                <span
                  class="status-wrapper style--none"
                >
                  <span
                    class="profile-icon "
                  >
                    <img
                      alt="user profile image"
                      class="Avatar Avatar-md"
                      loading="lazy"
                      src="/api/v4/users/user_id/image"
                    />
                  </span>
                </span>
              </div>
              <div
                class="UserGrid_name"
              >
                <span
                  data-testid="userGridNameText"
                >
                  some-user -  
                </span>
                <span
                  class="ug-email"
                  data-testid="userGridEmail"
                />
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell"
            data-testid="dataGridCell"
            style="flex-grow: 1;"
          />
          <div
            class="DataGrid_cell"
            data-testid="dataGridCell"
            style="text-align: right;"
          >
            <div
              class="UserGrid_removeRow"
            >
              <a
                class="disabled"
                href="#"
                role="button"
              >
                Remove
              </a>
            </div>
          </div>
        </div>
        <div
          class="DataGrid_row"
          data-testid="dataGridRow"
        >
          <div
            class="DataGrid_cell"
            data-testid="dataGridCell"
            style="flex-grow: 3;"
          >
            <div
              class="UserGrid_nameRow"
            >
              <div
                data-testid="userGridAvatar"
              >
                <span
                  class="status-wrapper style--none"
                >
                  <span
                    class="profile-icon "
                  >
                    <img
                      alt="user profile image"
                      class="Avatar Avatar-md"
                      loading="lazy"
                      src="/api/v4/users/user_id/image"
                    />
                  </span>
                </span>
              </div>
              <div
                class="UserGrid_name"
              >
                <span
                  data-testid="userGridNameText"
                >
                  some-user -  
                </span>
                <span
                  class="ug-email"
                  data-testid="userGridEmail"
                />
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell"
            data-testid="dataGridCell"
            style="flex-grow: 1;"
          />
          <div
            class="DataGrid_cell"
            data-testid="dataGridCell"
            style="text-align: right;"
          >
            <div
              class="UserGrid_removeRow"
            >
              <a
                class="disabled"
                href="#"
                role="button"
              >
                Remove
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_footer"
        data-testid="dataGridFooter"
      >
        <div
          class="DataGrid_cell"
        >
          <span
            data-testid="dataGridPaginationInfo"
          >
            1 - 2 of 2
          </span>
          <button
            aria-label="Previous page"
            class="btn btn-quaternary btn-icon btn-sm ml-2 prev disabled"
            data-testid="dataGridPrev"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-chevron-left"
              title="Previous Icon"
            />
          </button>
          <button
            aria-label="Next page"
            class="btn btn-quaternary btn-icon btn-sm next disabled"
            data-testid="dataGridNext"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-chevron-right"
              title="Next Icon"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
